[package]
name = "moly"
version = "0.1.0"
authors = ["misabiko"]
edition = "2021"
repository = "https://github.com/misabiko/moly_lang"
default-run = "moly_bin"

[[bin]]
name = "moly_bin"
path = "src/main.rs"

[[bin]]
name = "benchmark"

[lib]
name = "moly"
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.4.3"
enum_primitive = "0.1.1"
clap = { version = "3.2.22", features = ["derive"] }
leb128 = "0.2.5"
ieee754 = "0.2.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasmprinter = "0.2.42"
[dependencies.web-sys]
version = "0.3.60"
features = [
	"Window",
	"Document",
	"HtmlElement",
	"console"
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.2.3"