[package]
name = "moly"
version = "0.1.0"
authors = ["misabiko"]
edition = "2021"
repository = "https://github.com/misabiko/moly_lang"
#TODO Add blocked issue on github
#Rename bin to "moly_bin" and lib to "moly" when issue fixed https://github.com/rust-lang/cargo/issues/9778
default-run = "moly"

[[bin]]
name = "benchmark"

[lib]
name = "moly_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.4.3"
enum_primitive = "0.1.1"
clap = { version = "3.2.22", features = ["derive"] }
leb128 = "0.2.5"
ieee754 = "0.2.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
wasmprinter = "0.2.42"
web-sys = { version = "0.3", features = ["console"]}
lsp-server = "0.6"
lsp-types = "0.93"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.2.3"